# Structured-Computer-Organization

./: CMakeLists.txt  README.md  build_and_test.sh
src/: Algorithms.cpp  Algorithms.hpp  Problems.cpp  Problems.hpp  Tests.cpp  Utils.cpp  Utils.hpp  appendixA_problem16.cpp  appendixA_problem16.hpp  appendixA_problem16_test.cpp  appendixB_problem9.cpp  appendixB_problem9.hpp  appendixB_problem9_test.cpp  chapter2_problem35.cpp  chapter2_problem35.hpp  chapter2_problem35_tests.cpp  chapter2_problem36.hpp  chapter2_problem36_tests.cpp  chapter3_problem46.cpp  chapter3_problem46.hpp  chapter3_problem46_tests.cpp  chapter3_problem47.cpp  chapter3_problem47.hpp  chapter3_problem47_tests.cpp  chapter4_problem35.cpp  chapter4_problem35.hpp  chapter4_problem35_tests.cpp  chapter5.6.2_towers.cpp  chapter5.6.2_towers.hpp  chapter5.6.2_towers_test.cpp  chapter5_problem30_test.cpp  chapter6_problem38.cpp  chapter6_problem38.hpp  chapter6_problem38_test.cpp  chapter6_problem40.cpp  chapter7_problem23.hpp  chapter7_problem23_test.cpp
testing_dir/: some_recipe.txt
